fix the abilities content
Turned off the list of skills to devices less than 768px

--- a/css/style.css
+++ b/css/style.css
@@ -571,6 +571,10 @@ body {
         gap: 0px;
     }
 
+    .abilitiesSkillContainer {
+        display: none;
+    }
+
     .abilitiesList li .abilitiesContentContainer:before {
         content: '';
         position: absolute;
